<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">FisioApp</string>
    <string name="authenticate">Authenticate</string>
    <string name="button_register">Register</string>
    <string name="button_login">LogIn</string>
    <string name="catalog_detail_name_label_text">Name</string>
    <string name="catalog_list">Catalog List</string>
    <string name="catalog_list_element_image_content">catalog image</string>
    <string name="login_email_hint">Email</string>
    <string name="login_name_hint">Name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="the_team">Project X Team:</string>
    <string name="the_team_members">- Alan Casas\n- Carlos Company\n- Gema Martínez\n- Rodrigo Limpias</string>
    <string name="title_activity_about_us">About us</string>
    <string name="title_activity_login">Welcome to FisioApp</string>
    <string name="title_activity_user_details">User Details</string>
    <string name="title_catalog_detail">Product Detail</string>
    <string name="title_catalog_list">Products</string>
    <string name="title_service_detail">Service Detail</string>
    <string name="title_service_list">Services</string>
    <string name="catalog_products_title">Products</string>
    <string name="catalog_services_title">Services</string>
    <string name="calendar_title">Calendar</string>
    <string name="form_user_details_name">Name</string>
    <string name="form_user_details_last_name">Last name</string>
    <string name="form_user_details_email">Email</string>
    <string name="form_user_details_address">Address</string>
    <string name="form_user_details_phone">Phone</string>
    <string name="form_user_details_birthdate">Birthdate</string>
    <string name="form_user_details_national_id">National ID</string>
    <string name="form_user_details_fellowship_id">Fellowship ID</string>
    <string name="form_user_details_since">Since</string>
    <string name="form_user_details_last_login">Last login</string>
    <string name="form_user_details_professional">Professional</string>
    <string name="form_user_details_gender">Gender</string>
    <string name="form_user_details_female">Female</string>
    <string name="form_user_details_male">Male</string>
    <string name="user_image_description">User image</string>
    <string name="map_image_desc">map image description</string>
    <string name="log_in">Log In</string>
    <string name="about_me">About Me</string>
    <string name="calendar">Calendar</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="client">Client</string>
    <string name="hour">Hour:</string>
    <string name="price">Price:</string>
    <string name="address">Address:</string>
    <string name="status">Status:</string>
    <string name="is_confirmed">Confirmed</string>
    <string name="is_cancelled">Cancelled</string>
    <string name="observations">Observations:</string>
    <string name="save_bttn">SAVE</string>
    <string name="cancel_bttn">CANCEL</string>
    <string name="catalog_name">Name</string>
    <string name="catalog_desc">Description</string>
    <string name="catalog_price">Price</string>
    <string name="catalog_active">Active</string>
    <string name="catalog_save_bttn">Save</string>
    <string name="catalog_delete_bttn">Delete</string>
    <string name="user_details">User Details</string>
    <string name="about_us">About us</string>
    <string name="no_extra_info">No extra info provided</string>
    <string name="catalog_update">Update</string>
    <string name="logout">Logout</string>
    <string name="menu_exit_message">Do you want to exit now?</string>
    <string name="menu_logout_cancel">CANCEL</string>
    <string name="menu_logout_exit">LOGOUT</string>
    <string name="fragment_title_login">LOGIN</string>
    <string name="fragment_title_register">REGISTER</string>
</resources>
