<android.support.design.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.projectx.fisioapp.app.fragment.AppointmentDetailFragment">


    <ScrollView
        android:id="@+id/scrollFormArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/appointment_detail_map_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/map_image_desc"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/client"
                        tools:text="@string/client" />

                    <TextView
                        android:id="@+id/appointment_detail_customer_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Rodrigo Limpias" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/hour"
                        tools:text="@string/hour" />

                    <TextView
                        android:id="@+id/appointment_detail_time_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="10.30am" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/price"
                        tools:text="@string/price" />

                    <TextView
                        android:id="@+id/appointment_detail_customer_price_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="35€" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/address"
                        tools:text="@string/address" />

                    <TextView
                        android:id="@+id/appointment_detail_address_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Calle Goya #15" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="0.75"
                        android:text="@string/observations"
                        tools:text="@string/observations" />

                    <TextView
                        android:id="@+id/appointment_detail_extra_info_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.25"
                        tools:text="JUST A REALLY LONG TEXT TO SIMULATE MULTILINE EXTRA INFO FIELD AND HOW IT WOULD LOOK ON SCREEN WHEN DISPLAYED" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/appointment_detail_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Switch
                        android:id="@+id/detail_appointment_confirmed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/is_confirmed"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/appointment_detail_cancelled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Switch
                        android:id="@+id/detail_appointment_cancelled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/is_cancelled"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnSave"
        app:srcCompat="@android:drawable/ic_menu_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="8dp" />
</android.support.design.widget.CoordinatorLayout>


