<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.activity.LoginActivity">

    <TextView
        android:id="@+id/tvApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_login_screen_login"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/login_screen_title_text_size"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:background="@drawable/form_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_margin_wide"
        android:layout_marginStart="@dimen/activity_margin_wide"
        android:layout_marginTop="@dimen/activity_margin_wide"
        android:layout_weight="0.7"
        android:gravity="start|center_vertical"
        android:hint="@string/login_name_hint"
        android:inputType="text"
        android:singleLine="true"
        android:padding="@dimen/activity_margin_default"
        android:paddingBottom="@dimen/activity_margin_wide"
        android:paddingTop="@dimen/activity_margin_wide"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/tvApp"
        app:layout_constraintStart_toStartOf="@+id/tvApp"
        app:layout_constraintTop_toBottomOf="@+id/tvApp" />

    <EditText
        android:id="@+id/etEmail"
        android:background="@drawable/form_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_margin_wide"
        android:layout_marginStart="@dimen/activity_margin_wide"
        android:layout_marginTop="@dimen/activity_margin_wide"
        android:layout_weight="0.7"
        android:gravity="start|center_vertical"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:padding="@dimen/activity_margin_default"
        android:paddingBottom="@dimen/activity_margin_wide"
        android:paddingTop="@dimen/activity_margin_wide"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/etName"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etPass"
        android:background="@drawable/form_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_margin_wide"
        android:layout_marginStart="@dimen/activity_margin_wide"
        android:layout_marginTop="@dimen/activity_margin_wide"
        android:layout_weight="0.7"
        android:gravity="start|center_vertical"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:singleLine="true"
        android:padding="@dimen/activity_margin_default"
        android:paddingBottom="@dimen/activity_margin_wide"
        android:paddingTop="@dimen/activity_margin_wide"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="@dimen/activity_screen_width_null"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_wide"
        android:background="@drawable/form_button"
        android:text="REGISTER"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/etPass"
        app:layout_constraintStart_toStartOf="@+id/etPass"
        app:layout_constraintTop_toBottomOf="@+id/etPass" />

</android.support.constraint.ConstraintLayout>
